# news_classification

./: Makefile  README.md  pyproject.toml  setup.py
conda/: environment-dev.yml  environment.yml
data/: data.csv
news/: benchmark.py  cross_validation.py  dataset.py  lstm.py  utils.py
news/configs/: config.yaml
notebooks/: eda.ipynb
tests/fixture/data/: clean_data.csv
tests/integration/: test_benchmark.py  test_cross_validation.py  test_lstm.py
tests/unit/: test_dataset.py
